--- a/app/src/main/res/layout/fragment_new.xml
+++ b/app/src/main/res/layout/fragment_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,41 +9,47 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ScrollView
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:layout_scrollFlags="scroll"
+            app:titleTextColor="@color/white"
+            android:background="@color/colorPrimaryDark"
+            app:navigationIcon="@drawable/zuo_white"
+            app:logo="@drawable/news_1"
+            app:popupTheme="@style/ToolbarPopupTheme">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:text="新闻"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                app:titleTextColor="@color/white"
-                android:background="@color/colorPrimaryDark"
-                app:navigationIcon="@drawable/zuo_white"
-                app:logo="@drawable/news_1"
-                app:popupTheme="@style/ToolbarPopupTheme">
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textColor="@color/white"
-                    android:text="新闻"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-
-
-            </android.support.v7.widget.Toolbar>
             <com.youth.banner.Banner
                 android:id="@+id/mbanner"
                 android:layout_width="match_parent"
+                app:layout_scrollFlags="scroll"
                 android:layout_height="150dp">
 
             </com.youth.banner.Banner>
@@ -56,11 +62,12 @@
 
 
             </android.support.v7.widget.RecyclerView>
+
+
         </LinearLayout>
 
 
+    </android.support.v4.widget.NestedScrollView>
 
-    </ScrollView>
 
-
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
